--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
-    "mongoose": "^8.2.3"
+    "mongoose": "^8.2.3",
+    "mongoose-aggregate-paginate-v2": "^1.0.7"
   }
 }
